syntax = "proto3";

package image_service;

// Matthew's Test Image Service

// Message representing an Image
message StreamImageResponse {
    string name = 1;             // Name of the image
    string format = 2;           // Image format (e.g., "jpg", "png")
    bytes content = 3;           // Image content as bytes
}

// Request message for ListImages RPC
message ListImagesRequest {}

// Response message for ListImages RPC
message ListImagesResponse {
    repeated string image_names = 1; // List of image names
}

// Request message for StreamImages RPC
message StreamImagesRequest {
    repeated string image_names = 1; // List of image names to stream
}

// Image service definition
service ImageService {
    // List available image names
    rpc ListImages (ListImagesRequest) returns (ListImagesResponse);

    // Stream images based on the provided names
    rpc StreamImages (StreamImagesRequest) returns (stream StreamImageResponse);
}